# async_parser

./: .dockerignore  .env.example  .gitignore  README  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
database/core/: settings.py
database/orm/: async_database.py
database/orm/alembic/: env.py
database/orm/repositories/: __init__.py  weather_repository.py
database/services/weather/: weather_service.py
database/views/: router.py
database/views/weather/: weather_view.py
docker/: Dockerfile
src/: main.py
src/api/: main.py
src/api/views/: router.py
src/celery/: celery.py  tasks.py
src/containers/: container.py
src/core/: settings.py
src/crawler/: abstract_crawler.py  weather_crawler.py
src/csv_getter/: main.py
src/csv_getter/crawler/: abstract_crawler.py  weather_crawler.py
src/csv_getter/http_client/: async_client.py
src/csv_getter/parser/: abstract_parser.py  weather_parser.py
src/csv_getter/scrapper/: weather_scrapper.py
src/csv_getter/storage/: csv_storage.py
src/decorators/: time_decorator.py
src/enums/: conditions.py
src/http_client/: abstract_client.py  async_client.py
src/orm/: async_database.py
src/orm/alembic/: alembic.ini  (+1 more)
src/parser/: abstract_parser.py  weather_parser.py
src/scrapper/: abstract_scrapper.py  weather_scrapper.py
src/storage/: abstract_storage.py  csv_storage.py
src/utils/: date_utlis.py  string_utils.py
src/weather_collector/: main.py
system/: Dockerfile  alembic.ini  entrypoint-app.sh  entrypoint-celery-beat.sh  entrypoint-celery-worker.sh  entrypoint.sh  pyproject.toml
(+49 files in other folders)
